--- a/src/components/CourseGoals/CourseInput/CourseInput.css
+++ b/src/components/CourseGoals/CourseInput/CourseInput.css
@@ -1,3 +1,4 @@
+
 .form-control {
   margin: 0.5rem 0;
 }
@@ -21,4 +22,9 @@
   outline: none;
   background: #fad0ec;
   border-color: #8b005d;
+}
+
+.form-control.invalid input{
+  background: rgb(255, 195, 195);
+  border-color: red;
 }
